# pic_gen

./: 510_8new1.csv  Cargo.toml  file.txt  labels.csv  功能列表.docx  特征.docx
src/: main.rs
